--- a/UI/Views/StudentTestBrowserView.xaml
+++ b/UI/Views/StudentTestBrowserView.xaml
@@ -88,6 +88,10 @@
                     </GridView>
                 </ListView.View>
             </ListView>
+
+            <Label Content="Не знайдено жодного тесту" FontSize="48"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,25,0,0"
+                   Visibility="{Binding NoAnyTest, Converter={StaticResource BoolToVis}}"/>
         </StackPanel>
     </Grid>
 </UserControl>
