--- a/UI/Views/TeacherTestBrowserView.xaml
+++ b/UI/Views/TeacherTestBrowserView.xaml
@@ -7,7 +7,7 @@
              xmlns:viewmodels="clr-namespace:UI.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:TeacherTestBrowserViewModel}"
              xmlns:models="clr-namespace:UI.ObservableModels"
              mc:Ignorable="d" 
-             d:DesignHeight="640" d:DesignWidth="1208">
+             d:DesignHeight="640" d:DesignWidth="1325.551">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
 
@@ -56,9 +56,10 @@
     </UserControl.Resources>
 
     <Grid>
-        <!--Кнопка назад-->
-        <Button Content="Назад" Command="{Binding BackCommand}" FontSize="24"
-                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10" Padding="25,5,25,5"/>
+        <!--Кнопка виходу з аккаунту-->
+        <Button Content="Вйти з аккаунту" FontSize="24"
+                Command="{Binding LogOutCommand}"
+                HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Padding="25,5,25,5"/>
 
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,5">
@@ -86,7 +87,7 @@
             <ListView ItemsSource="{Binding FilteredTests}" SelectedItem="{Binding SelectedTest}" SelectionMode="Single"
                       ItemTemplate="{StaticResource TestItemTempltate}"
                       FontSize="24"
-                      HorizontalAlignment="Center" VerticalAlignment="Center"
+                      HorizontalAlignment="Center" VerticalAlignment="Center" Margin="50,0,50,0"
                       HorizontalContentAlignment="Stretch" 
                       Visibility="{Binding AnyTest, Converter={StaticResource BoolToVis}}">
             </ListView>
