--- a/UI/Views/TeacherTestBrowserView.xaml
+++ b/UI/Views/TeacherTestBrowserView.xaml
@@ -53,8 +53,17 @@
                 Command="{Binding LogOutCommand}"
                 HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Padding="25,5,25,5"/>
 
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,5">
+        <Grid HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Horizontal" 
+                        HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,5"
+                        Grid.Row="0">
                 
                 <!--Пошукова строка-->
                 <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" FontSize="24"
@@ -79,14 +88,16 @@
             <ListView ItemsSource="{Binding FilteredTests}" SelectedItem="{Binding SelectedTest}" SelectionMode="Single"
                       ItemTemplate="{StaticResource TestItemTempltate}"
                       FontSize="24"
-                      HorizontalAlignment="Center" VerticalAlignment="Center" Margin="50,0,50,0"
-                      HorizontalContentAlignment="Stretch" 
-                      Visibility="{Binding AnyTest, Converter={StaticResource BoolToVis}}">
+                      HorizontalAlignment="Stretch" Margin="50,0,50,50"
+                      HorizontalContentAlignment="Stretch"
+                      Visibility="{Binding AnyTest, Converter={StaticResource BoolToVis}}"
+                      Grid.Row="1">
             </ListView>
 
             <Label Content="Не знайдено жодного тесту" FontSize="48"
                    HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,25,0,0"
-                   Visibility="{Binding NoAnyTest, Converter={StaticResource BoolToVis}}"/>
-        </StackPanel>
+                   Visibility="{Binding NoAnyTest, Converter={StaticResource BoolToVis}}"
+                   Grid.Row="1"/>
+        </Grid>
     </Grid>
 </UserControl>
